# cloud-computing-programming-assignment

./: .gitignore  README.md
mp1/: Application  Application.cpp  CMakeLists  CMakeLists.txt  GPATH  GTAGS  Grader.sh  MP1Node.cpp  MP1Node.h  Member.cpp  Member.h  stdincludes.h
mp2_assignment/: Application  CMakeLists  CMakeLists.txt  KVStoreGrader.sh  MP1Node.cpp  MP1Node.h  MP2Node.cpp  MP2Node.h
